--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-react": "^7.12.7",
     "react-dom": "^17.0.1",
-    "react": "^17.0.1"
+    "react": "^17.0.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1"
   }
 }
