--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@babel/preset-react": "^7.12.7",
     "react-dom": "^17.0.1",
     "react": "^17.0.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1"
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "postcss-modules": "^4.0.0",
+    "postcss": "^8.2.1"
   }
 }
