--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "@actions/github": "^4.0.0",
     "@babel/core": "^7.12.9",
     "@babel/preset-react": "^7.12.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/types": "^7.12.11",
+    "@babel/generator": "^6.26.1",
     "react-dom": "^17.0.1",
     "react": "^17.0.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "postcss-modules": "^4.0.0",
     "postcss": "^8.2.1"
   }
